// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reverse string empty string 1`] = `[MockFunction]`;

exports[`reverse string even string length 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Array [
          "т",
          "р",
          "и",
          "в",
          "е",
          "п",
        ],
        "firstIndex": 0,
        "secondIndex": 5,
      },
    ],
    Array [
      Object {
        "data": Array [
          "т",
          "е",
          "и",
          "в",
          "р",
          "п",
        ],
        "firstIndex": 1,
        "secondIndex": 4,
      },
    ],
    Array [
      Object {
        "data": Array [
          "т",
          "е",
          "в",
          "и",
          "р",
          "п",
        ],
        "firstIndex": 2,
        "secondIndex": 3,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`reverse string odd string length 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Array [
          "а",
          "у",
          "з",
          "и",
          "н",
          "а",
          "т",
          "р",
          "к",
        ],
        "firstIndex": 0,
        "secondIndex": 8,
      },
    ],
    Array [
      Object {
        "data": Array [
          "а",
          "р",
          "з",
          "и",
          "н",
          "а",
          "т",
          "у",
          "к",
        ],
        "firstIndex": 1,
        "secondIndex": 7,
      },
    ],
    Array [
      Object {
        "data": Array [
          "а",
          "р",
          "т",
          "и",
          "н",
          "а",
          "з",
          "у",
          "к",
        ],
        "firstIndex": 2,
        "secondIndex": 6,
      },
    ],
    Array [
      Object {
        "data": Array [
          "а",
          "р",
          "т",
          "а",
          "н",
          "и",
          "з",
          "у",
          "к",
        ],
        "firstIndex": 3,
        "secondIndex": 5,
      },
    ],
    Array [
      Object {
        "data": Array [
          "а",
          "р",
          "т",
          "а",
          "н",
          "и",
          "з",
          "у",
          "к",
        ],
        "firstIndex": 4,
        "secondIndex": 4,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`reverse string one char 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Array [
          "я",
        ],
        "firstIndex": 0,
        "secondIndex": 0,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
